updated images for gifs

--- a/index.html.html
+++ b/index.html.html
@@ -102,7 +102,7 @@
 				<table border="0" cellpadding="0" cellspacing="0" align="center" class="deviceWidth">
 					<tr>
 						<td class="center" style="padding-top: 20px;">
-							<a href="https://www.coldwatercreek.com/?utm_source=crm&utm_medium=email&utm_campaign={(meta:camp_name)}&sv_svemi={(Email_SHA256)}"><img src="https://i.e.coldwatercreek.com/wpm/1095/ContentUploads/New_logo/CWClogo_Swoosh_5575.png" alt="Coldwater Creek" class="logo" border="0" /></a>
+								<a href="https://www.coldwatercreek.com/?utm_source=crm&utm_medium=email&utm_campaign={(meta:camp_name)}&sv_svemi={(Email_SHA256)}"><img src="https://i.e.coldwatercreek.com/wpm/1095/ContentUploads/LogoUpdated101921.png" width="304px" alt="Coldwater Creek" class="logo" border="0" /></a>
 						</td>
 					</tr>
 				</table>
@@ -239,15 +239,15 @@
 					<tr>
 						<td>
 			<a href="LINK HERE?utm_source=crm&utm_medium=email&utm_campaign={(meta:camp_name)}&sv_svemi={(Email_SHA256)}" data-link-name="LINK NAME">
-			<img src="10302021_sweatshirts_21.jpg" width="212" height="216" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
+			<img src="10302021_sweatshirts_21.gif" width="212" height="216" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
 						</td>
 		<td>
 			<a href="LINK HERE?utm_source=crm&utm_medium=email&utm_campaign={(meta:camp_name)}&sv_svemi={(Email_SHA256)}" data-link-name="LINK NAME">
-			<img src="10302021_sweatshirts_22.jpg" width="216" height="216" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
+			<img src="10302021_sweatshirts_22.gif" width="216" height="216" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
 						</td>
 		<td>
 			<a href="LINK HERE?utm_source=crm&utm_medium=email&utm_campaign={(meta:camp_name)}&sv_svemi={(Email_SHA256)}" data-link-name="LINK NAME">
-			<img src="10302021_sweatshirts_23.jpg" width="212" height="216" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
+			<img src="10302021_sweatshirts_23.gif" width="212" height="216" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
 						</td>
 </tr>
 				</table>
@@ -255,15 +255,15 @@
 					<tr>
 						<td>
 			<a href="LINK HERE?utm_source=crm&utm_medium=email&utm_campaign={(meta:camp_name)}&sv_svemi={(Email_SHA256)}" data-link-name="LINK NAME">
-			<img src="10302021_sweatshirts_24.jpg" width="214" height="223" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
+			<img src="10302021_sweatshirts_24.gif" width="214" height="223" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
 						</td>
 		<td>
 			<a href="LINK HERE?utm_source=crm&utm_medium=email&utm_campaign={(meta:camp_name)}&sv_svemi={(Email_SHA256)}" data-link-name="LINK NAME">
-			<img src="10302021_sweatshirts_25.jpg" width="214" height="223" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
+			<img src="10302021_sweatshirts_25.gif" width="214" height="223" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
 						</td>
 		<td>
 			<a href="LINK HERE?utm_source=crm&utm_medium=email&utm_campaign={(meta:camp_name)}&sv_svemi={(Email_SHA256)}" data-link-name="LINK NAME">
-			<img src="10302021_sweatshirts_26.jpg" width="212" height="223" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
+			<img src="10302021_sweatshirts_26.gif" width="212" height="223" class="deviceWidth" style="display:block;" alt="ALT TAG"></a>
 						</td>
 </tr>
 				</table>
